Expose new models in generated package
