# python-sdk/src/intellioptics/generated/openapi/api/default/get_current_user_v1_users_me_get.py
@@ -1,0 +1,124 @@
+from http import HTTPStatus
+from typing import Any, Optional, Union, cast
+
+import httpx
+
+from ...client import AuthenticatedClient, Client
+from ...types import Response, UNSET
+from ... import errors
+
+from ...models.http_validation_error import HTTPValidationError
+from ...models.user_identity import UserIdentity
+from typing import cast
+
+
+def _get_kwargs(
+) -> dict[str, Any]:
+
+
+
+
+    _kwargs: dict[str, Any] = {
+        "method": "get",
+        "url": "/v1/users/me",
+    }
+
+
+    return _kwargs
+
+
+
+def _parse_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Optional[Union[UserIdentity, HTTPValidationError]]:
+    if response.status_code == 200:
+        response_200 = UserIdentity.from_dict(response.json())
+
+
+
+        return response_200
+
+    if response.status_code == 401:
+        response_401 = response.json()
+        return response_401
+
+    if response.status_code == 422:
+        response_422 = HTTPValidationError.from_dict(response.json())
+
+
+
+        return response_422
+
+    if client.raise_on_unexpected_status:
+        raise errors.UnexpectedStatus(response.status_code, response.content)
+    else:
+        return None
+
+
+def _build_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Response[Union[Any, UserIdentity, HTTPValidationError]]:
+    return Response(
+        status_code=HTTPStatus(response.status_code),
+        content=response.content,
+        headers=response.headers,
+        parsed=_parse_response(client=client, response=response),
+    )
+
+
+def sync_detailed(
+    *,
+    client: Union[AuthenticatedClient, Client],
+) -> Response[Union[Any, UserIdentity, HTTPValidationError]]:
+    """Get Current User"""
+
+
+
+    kwargs = _get_kwargs(
+    )
+
+    response = client.get_httpx_client().request(
+        **kwargs,
+    )
+
+    return _build_response(client=client, response=response)
+
+
+def sync(
+    *,
+    client: Union[AuthenticatedClient, Client],
+) -> Optional[Union[Any, UserIdentity, HTTPValidationError]]:
+    """Get Current User"""
+
+
+
+    return sync_detailed(
+        client=client,
+)
+
+
+async def asyncio_detailed(
+    *,
+    client: Union[AuthenticatedClient, Client],
+) -> Response[Union[Any, UserIdentity, HTTPValidationError]]:
+    """Get Current User"""
+
+
+
+    kwargs = _get_kwargs(
+    )
+
+    response = await client.get_async_httpx_client().request(
+        **kwargs
+    )
+
+    return _build_response(client=client, response=response)
+
+
+async def asyncio(
+    *,
+    client: Union[AuthenticatedClient, Client],
+) -> Optional[Union[Any, UserIdentity, HTTPValidationError]]:
+    """Get Current User"""
+
+
+
+    return (await asyncio_detailed(
+        client=client,
+    )).parsed
