# python-sdk/src/intellioptics/generated/openapi/api/default/submit_label_v1_labels_post.py
@@ -1,0 +1,132 @@
+from http import HTTPStatus
+from typing import Any, Optional, Union, cast
+
+import httpx
+
+from ...client import AuthenticatedClient, Client
+from ...types import Response, UNSET
+from ... import errors
+
+from ...models.http_validation_error import HTTPValidationError
+from ...models.label_submission import LabelSubmission
+from typing import cast
+
+
+def _get_kwargs(
+    *,
+    body: LabelSubmission,
+) -> dict[str, Any]:
+    headers: dict[str, Any] = {}
+
+
+
+
+    _kwargs: dict[str, Any] = {
+        "method": "post",
+        "url": "/v1/labels",
+    }
+
+    _kwargs["json"] = body.to_dict()
+
+
+    headers["Content-Type"] = "application/json"
+
+    _kwargs["headers"] = headers
+    return _kwargs
+
+
+def _parse_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Optional[Union[Any, HTTPValidationError]]:
+    if response.status_code == 200:
+        response_200 = response.json()
+        return response_200
+
+    if response.status_code == 422:
+        response_422 = HTTPValidationError.from_dict(response.json())
+
+
+
+        return response_422
+
+    if client.raise_on_unexpected_status:
+        raise errors.UnexpectedStatus(response.status_code, response.content)
+    else:
+        return None
+
+
+def _build_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Response[Union[Any, HTTPValidationError]]:
+    return Response(
+        status_code=HTTPStatus(response.status_code),
+        content=response.content,
+        headers=response.headers,
+        parsed=_parse_response(client=client, response=response),
+    )
+
+
+def sync_detailed(
+    *,
+    client: Union[AuthenticatedClient, Client],
+    body: LabelSubmission,
+) -> Response[Union[Any, HTTPValidationError]]:
+    """Submit Label"""
+
+
+
+    kwargs = _get_kwargs(
+        body=body,
+    )
+
+    response = client.get_httpx_client().request(
+        **kwargs,
+    )
+
+    return _build_response(client=client, response=response)
+
+
+def sync(
+    *,
+    client: Union[AuthenticatedClient, Client],
+    body: LabelSubmission,
+) -> Optional[Union[Any, HTTPValidationError]]:
+    """Submit Label"""
+
+
+
+    return sync_detailed(
+        client=client,
+body=body,
+    ).parsed
+
+
+async def asyncio_detailed(
+    *,
+    client: Union[AuthenticatedClient, Client],
+    body: LabelSubmission,
+) -> Response[Union[Any, HTTPValidationError]]:
+    """Submit Label"""
+
+
+
+    kwargs = _get_kwargs(
+        body=body,
+    )
+
+    response = await client.get_async_httpx_client().request(
+        **kwargs
+    )
+
+    return _build_response(client=client, response=response)
+
+
+async def asyncio(
+    *,
+    client: Union[AuthenticatedClient, Client],
+    body: LabelSubmission,
+) -> Optional[Union[Any, HTTPValidationError]]:
+    """Submit Label"""
+
+
+
+    return (await asyncio_detailed(
+        client=client,
+body=body,
+    )).parsed
