# python-sdk/src/intellioptics/generated/openapi/models/__init__.py
@@ -5,19 +5,23 @@ from .answer_out_answer import AnswerOutAnswer
 from .body_image_query_v1_image_queries_post import BodyImageQueryV1ImageQueriesPost
 from .detector_create import DetectorCreate
 from .detector_create_mode import DetectorCreateMode
+from .detector_list import DetectorList
 from .detector_out import DetectorOut
 from .detector_out_mode import DetectorOutMode
 from .feedback_in import FeedbackIn
 from .feedback_in_bboxes_type_0_item import FeedbackInBboxesType0Item
 from .feedback_in_correct_label import FeedbackInCorrectLabel
+from .label_submission import LabelSubmission
 from .http_validation_error import HTTPValidationError
 from .image_query_json import ImageQueryJson
+from .user_identity import UserIdentity
 from .validation_error import ValidationError
 
 __all__ = (
     "AnswerOut",
     "AnswerOutAnswer",
     "BodyImageQueryV1ImageQueriesPost",
+    "DetectorList",
     "DetectorCreate",
     "DetectorCreateMode",
     "DetectorOut",
@@ -25,7 +29,9 @@ __all__ = (
     "FeedbackIn",
     "FeedbackInBboxesType0Item",
     "FeedbackInCorrectLabel",
+    "LabelSubmission",
     "HTTPValidationError",
     "ImageQueryJson",
+    "UserIdentity",
     "ValidationError",
 )
