# python-sdk/src/intellioptics/generated/openapi/models/detector_list.py
@@ -1,0 +1,68 @@
+from collections.abc import Mapping
+from typing import Any, TypeVar, Optional, BinaryIO, TextIO, TYPE_CHECKING, Generator
+
+from attrs import define as _attrs_define
+from attrs import field as _attrs_field
+
+from ..models.detector_out import DetectorOut
+from typing import cast, Union
+
+T = TypeVar("T", bound="DetectorList")
+
+
+@_attrs_define
+class DetectorList:
+    """
+        Attributes:
+            items (list['DetectorOut']):
+    """
+
+    items: list['DetectorOut']
+    additional_properties: dict[str, Any] = _attrs_field(init=False, factory=dict)
+
+    def to_dict(self) -> dict[str, Any]:
+        items = []
+        for items_item_data in self.items:
+            items_item = items_item_data.to_dict()
+            items.append(items_item)
+
+        field_dict: dict[str, Any] = {}
+        field_dict.update(self.additional_properties)
+        field_dict.update({
+            "items": items,
+        })
+
+        return field_dict
+
+    @classmethod
+    def from_dict(cls: type[T], src_dict: Mapping[str, Any]) -> T:
+        d = dict(src_dict)
+        items = []
+        _items = d.pop("items")
+        for items_item_data in (_items):
+            items_item = DetectorOut.from_dict(items_item_data)
+
+            items.append(items_item)
+
+        detector_list = cls(
+            items=items,
+        )
+
+        detector_list.additional_properties = d
+        return detector_list
+
+    @property
+    def additional_keys(self) -> list[str]:
+        return list(self.additional_properties.keys())
+
+    def __getitem__(self, key: str) -> Any:
+        return self.additional_properties[key]
+
+    def __setitem__(self, key: str, value: Any) -> None:
+        self.additional_properties[key] = value
+
+    def __delitem__(self, key: str) -> None:
+        del self.additional_properties[key]
+
+    def __contains__(self, key: str) -> bool:
+        return key in self.additional_properties
